--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>AngelDemon Art Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>AngelDemon Art Portfolio</title>\
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/queries.css">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-
     <div class="nav">
       <ul>
         <li class="extra-item"><a href="https://www.angeldemon.xyz/">HOME</a> </li>
@@ -14,7 +23,7 @@
         <li>
           <img class="logo" src="images/Logo.png" alt="Logo">
         </li>
-        <li> <a href="https://www.instagram.com/bellaingenue/">INSTAGRAM</a> </li>
+        <li> <a href="https://www.instagram.com/angeldemonartwork/">INSTAGRAM</a> </li>
         <li> <a href="https://github.com/BellaIngenue">GITHUB</a> </li>
       </ul>
     </div>
@@ -118,6 +127,21 @@
     <div id="footer" class="footer">
       <p>Contact Me at admin@angeldemon.xyz</p>
     </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery-3.7.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src ="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="js/fancybox.umd.js"></script>
+    <script src="js/chosen.jquery.min.js"></script>
+    <script src="js/barba.umd.js"></script>
+    <script src="js/extm.min.js"></script>
+    <script src="js/jquery.flexslider-min.js"></script>
+    <script src="js/percent-preloader.min.js"></script>
+    <script src="js/popup.js"></script>
 
 
   </body>
