Changes and Updates

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+      
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,74 +47,74 @@
       <div class="swiper gallery-cards">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <article class="gallery_card">
-              <img src="assets/images/be_mine.png" alt="HomuraxMadoka Fanart" class="gallery_img">
-              <div class="gallery_data">
-                  <h3 class="gallery_title">Be Mine, Valentine</h3>
-                  <span class="gallery_subtitle">Anniversary</span>
+            <article class="gallery__card">
+              <img src="assets/images/be_mine.png" alt="HomuraxMadoka Fanart" class="gallery__img">
+              <div class="gallery__data">
+                  <h3 class="gallery__title">Be Mine, Valentine</h3>
+                  <span class="gallery__subtitle">Anniversary</span>
               </div>
             </article>
           </div>
           <div class="swiper-slide">
-            <article class="gallery_card">
-              <img src="assets/images/bird.png" alt="HomuraxMadoka Fanart" class="gallery_img">
-              <div class="gallery_data">
-                  <h3 class="gallery_title">Bird Cage</h3>
-                  <span class="gallery_subtitle">Madoka in a Bird Cage</span>
+            <article class="gallery__card">
+              <img src="assets/images/bird.png" alt="HomuraxMadoka Fanart" class="gallery__img">
+              <div class="gallery__data">
+                  <h3 class="gallery__title">Bird Cage</h3>
+                  <span class="gallery__subtitle">Madoka in a Bird Cage</span>
               </div>
             </article>
           </div>
           <div class="swiper-slide">
-            <article class="gallery_card">
-              <img src="assets/images/omori.png" alt="Omori Fanart" class="gallery_img">
-              <div class="gallery_data">
-                  <h3 class="gallery_title">Omori Self-Portrait</h3>
-                  <span class="gallery_subtitle">Based off the Video Game, Omori</span>
+            <article class="gallery__card">
+              <img src="assets/images/omori.png" alt="Omori Fanart" class="gallery__img">
+              <div class="gallery__data">
+                  <h3 class="gallery__title">Omori Self-Portrait</h3>
+                  <span class="gallery__subtitle">Based off the Video Game, Omori</span>
               </div>
             </article>
           </div>
           <div class="swiper-slide">
-            <article class="gallery_card">
-              <img src="assets/images/centaur.png" alt="Centaur Girl" class="gallery_img">
-              <div class="gallery_data">
-                  <h3 class="gallery_title">Pinky Centaur Girl</h3>
-                  <span class="gallery_subtitle">A Cute Pink-Haired Centaur in love</span>
+            <article class="gallery__card">
+              <img src="assets/images/centaur.png" alt="Centaur Girl" class="gallery__img">
+              <div class="gallery__data">
+                  <h3 class="gallery__title">Pinky Centaur Girl</h3>
+                  <span class="gallery__subtitle">A Cute Pink-Haired Centaur in love</span>
               </div>
             </article>
           </div>
           <div class="swiper-slide">
-            <article class="gallery_card">
-              <img src="assets/images/starry_eyed.png" alt="StarryEyed" class="gallery_img">
-              <div class="gallery_data">
-                  <h3 class="gallery_title">Starry Eyed</h3>
-                  <span class="gallery_subtitle">Lover of the Stars</span>
+            <article class="gallery__card">
+              <img src="assets/images/starry_eyed.png" alt="StarryEyed" class="gallery__img">
+              <div class="gallery__data">
+                  <h3 class="gallery__title">Starry Eyed</h3>
+                  <span class="gallery__subtitle">Lover of the Stars</span>
               </div>
             </article>
           </div>
           <div class="swiper-slide">
-            <article class="gallery_card">
-              <img src="assets/images/slaytheprincess.png" alt="SlayThePrincess" class="gallery_img">
-              <div class="gallery_data">
-                  <h3 class="gallery_title">Slay the Princess Fanart</h3>
-                  <span class="gallery_subtitle">When a Crow and a Girl Fall in Love</span>
+            <article class="gallery__card">
+              <img src="assets/images/slaytheprincess.png" alt="SlayThePrincess" class="gallery__img">
+              <div class="gallery__data">
+                  <h3 class="gallery__title">Slay the Princess Fanart</h3>
+                  <span class="gallery__subtitle">When a Crow and a Girl Fall in Love</span>
               </div>
             </article>
           </div>
           <div class="swiper-slide">
-            <article class="gallery_card">
-              <img src="assets/images/demon_swing.png" alt="Demon Girl" class="gallery_img">
-              <div class="gallery_data">
-                  <h3 class="gallery_title">Cute Demon Girl</h3>
-                  <span class="gallery_subtitle">An Adorable Demon Girl Swinging Around</span>
+            <article class="gallery__card">
+              <img src="assets/images/demon_swing.png" alt="Demon Girl" class="gallery__img">
+              <div class="gallery__data">
+                  <h3 class="gallery__title">Cute Demon Girl</h3>
+                  <span class="gallery__subtitle">An Adorable Demon Girl Swinging Around</span>
               </div>
             </article>
           </div>
           <div class="swiper-slide">
-            <article class="gallery_card">
-              <img src="assets/images/enfp.png" alt="ENFP" class="gallery_img">
-              <div class="gallery_data">
-                  <h3 class="gallery_title">ENFP Fanart</h3>
-                  <span class="gallery_subtitle">HEWOLO! LMAOOOO</span>
+            <article class="gallery__card">
+              <img src="assets/images/enfp.png" alt="ENFP" class="gallery__img">
+              <div class="gallery__data">
+                  <h3 class="gallery__title">ENFP Fanart</h3>
+                  <span class="gallery__subtitle">HEWOLO! LMAOOOO</span>
               </div>
             </article>
           </div>
@@ -124,43 +125,43 @@
           <div class= "swiper gallery-thumbs">
               <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                      <div class="gallery_thumbnail">
-                        <img src="assets/images/be_mine.png" alt="HomuraxMadoka Fanart" class="gallery_img">
+                      <div class="gallery__thumbnail">
+                        <img src="assets/images/be_mine.png" alt="HomuraxMadoka Fanart" class="gallery__img">
                       </div>
                   </div>
                   <div class="swiper-slide">
-                      <div class="gallery_thumbnail">
-                        <img src="assets/images/bird.png" alt="HomuraxMadoka Fanart" class="gallery_img">
+                      <div class="gallery__thumbnail">
+                        <img src="assets/images/bird.png" alt="HomuraxMadoka Fanart" class="gallery__img">
                       </div>
                   </div>
                   <div class="swiper-slide">
-                      <div class="gallery_thumbnail">
-                        <img src="assets/images/omori.png" alt="Omori Fanart" class="gallery_img">
+                      <div class="gallery__thumbnail">
+                        <img src="assets/images/omori.png" alt="Omori Fanart" class="gallery__img">
                       </div>
                   </div>
                   <div class="swiper-slide">
-                      <div class="gallery_thumbnail">
-                        <img src="assets/images/centaur.png" alt="Centaur Girl" class="gallery_img">
+                      <div class="gallery__thumbnail">
+                        <img src="assets/images/centaur.png" alt="Centaur Girl" class="gallery__img">
                       </div>
                   </div>
                   <div class="swiper-slide">
-                      <div class="gallery_thumbnail">
-                        <img src="assets/images/starry_eyed.png" alt="StarryEyed" class="gallery_img">
+                      <div class="gallery__thumbnail">
+                        <img src="assets/images/starry_eyed.png" alt="StarryEyed" class="gallery__img">
                       </div>
                   </div>
                   <div class="swiper-slide">
-                      <div class="gallery_thumbnail">
-                        <img src="assets/images/slaytheprincess.png" alt="SlayThePrincess" class="gallery_img">
+                      <div class="gallery__thumbnail">
+                        <img src="assets/images/slaytheprincess.png" alt="SlayThePrincess" class="gallery__img">
                       </div>
                   </div>
                   <div class="swiper-slide">
-                      <div class="gallery_thumbnail">
-                        <img src="assets/images/demon_swing.png" alt="Demon Girl" class="gallery_img">
+                      <div class="gallery__thumbnail">
+                        <img src="assets/images/demon_swing.png" alt="Demon Girl" class="gallery__img">
                       </div>
                   </div>
                   <div class="swiper-slide">
-                      <div class="gallery_thumbnail">
-                        <img src="assets/images/enfp.png" alt="ENFP" class="gallery_img">
+                      <div class="gallery__thumbnail">
+                        <img src="assets/images/enfp.png" alt="ENFP" class="gallery__img">
                       </div>
                   </div>
               </div>
