--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <body>
     <div class="nav">
       <ul>
-        <li class="extra-item"><a href="https://www.angeldemon.xyz/">HOME</a> </li>
-        <li> <a href="mailto:sienasrivera@gmail.com">CONTACT</a> </li>
+        <li class="home"><a href="https://www.angeldemon.xyz/">HOME</a> </li>
+        <li> <a href="mailto:angeldemonartwork@gmail.com">CONTACT</a> </li>
         <li>
           <img class="logo" src="assets/images/Logo.png" alt="Logo">
         </li>
@@ -166,7 +166,7 @@
                   </div>
               </div>
               <!-- Swiper Pagination -->
-              <div class="swiper-pagination"></div>
+          <div class="swiper-pagination"></div>
           </div>
           <!-- Swiper Arrows -->
           <div class="swiper-button-next">
@@ -180,7 +180,7 @@
 
 
     <div id="footer" class="footer">
-      <p>Contact Me at admin@angeldemon.xyz</p>
+      <p>Contact Me At angeldemonartwork@gmail.com</p>
     </div>
       
     <!-- jQuery and other Scripts -->
