--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <div class="about">
             <a href="https://www.instagram.com/angeldemonart">
-            <img src="assets/images/resume_painting.png" class="main-img" alt="Main-Img">
+            <img src="assets/images/me.png" class="main-img" alt="Main-Img">
             </a>
             <h3><span>Hi there! I'm Siena Rivera</span></h3><br>
             <canvas id="confetti"></canvas>
@@ -85,7 +85,7 @@
     <script src="assets/js/js-confetti.min.js"></script>
     
     <!-- Confetti Machine -->  
-    <script src="assets/js/script.js"></script>
+    <script type="module" src="assets/js/script.js"></script>
     <script src="assets/js/es/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@0.9.0/dist/js-confetti.browser.js"></script>
