Editing the details

--- a/art.html
+++ b/art.html
@@ -181,7 +181,7 @@
 
 
     <div id="footer" class="footer">
-      <p>Contact Me At angeldemonartwork@gmail.com</p>
+      <p>💗 Contact Me at angeldemonartwork@gmail.com 💗</p>
     </div>
       
     <!-- jQuery and other Scripts -->
