I know there's imperfections but it's getting there ok

--- a/art.html
+++ b/art.html
@@ -31,15 +31,16 @@
       
   </head>
   <body>
+     
     <div class="nav">
       <ul>
         <li class="home"><a href="https://www.angeldemon.xyz/">HOME</a> </li>
-        <li> <a href="mailto:angeldemonartwork@gmail.com">CONTACT</a> </li>
+        <li class="contact"> <a href="mailto:angeldemonartwork@gmail.com">CONTACT</a> </li>
         <li>
           <img class="logo" src="assets/images/Logo.png" alt="Logo">
         </li>
-        <li> <a href="https://www.instagram.com/angeldemonartwork/">INSTAGRAM</a> </li>
-        <li> <a href="https://github.com/BellaIngenue">GITHUB</a> </li>
+        <li class="instagram"> <a href="https://www.instagram.com/angeldemonartwork/">INSTAGRAM</a> </li>
+        <li class="github"> <a href="https://github.com/BellaIngenue">GITHUB</a> </li>
       </ul>
     </div>
 
