--- a/art.html
+++ b/art.html
@@ -39,7 +39,7 @@
         <li>
           <img class="logo" src="assets/images/Logo.png" alt="Logo">
         </li>
-        <li class="instagram"> <a href="https://www.instagram.com/angeldemonartwork/">INSTAGRAM</a> </li>
+        <li class="instagram"> <a href="https://www.instagram.com/angeld3monart/">INSTAGRAM</a> </li>
         <li class="github"> <a href="https://github.com/BellaIngenue">GITHUB</a> </li>
       </ul>
     </div>
