--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 <body>
 
 <div class="nav">
-    <ul>
-        <li class="home"><a href="https://www.angeldemon.xyz/">HOME</a></li>
-        <li class="contact"><a href="mailto:angeldemonartwork@gmail.com">EMAIL</a></li>
-        <li>
-            <a href="https://www.angeldemon.xyz/art.html"><img class="logo" src="assets/images/Logo.png" alt="Logo"></a>
-        </li>
-        <li class="instagram"><a href="https://www.instagram.com/angeld3monart/">INSTAGRAM</a></li>
-        <li class="github"><a href="https://github.com/BellaIngenue">GITHUB</a></li>
-    </ul>
+    <div class="nav-table">
+        <ul id="nav-list">
+            <li class="home"><a href="https://www.angeldemon.xyz/">HOME</a></li>
+            <li class="contact"><a href="mailto:angeldemonartwork@gmail.com">MAIL</a></li>
+            <li><a href="https://www.angeldemon.xyz/art.html"><img class="logo" src="assets/images/Logo.png" alt="Logo"></a></li>
+            <li class="instagram"><a href="https://www.instagram.com/angeld3monart/">INSTA</a></li>
+            <li class="github"><a href="https://github.com/BellaIngenue">GIT</a></li>
+        </ul>
+    </div>
 </div>
 
 <div class="main">
