--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 
 <div class="nav">
     <div class="nav-table">
-        <ul id="nav-list">
+        <ul>
             <li class="home"><a href="https://www.angeldemon.xyz/">HOME</a></li>
             <li class="contact"><a href="mailto:angeldemonartwork@gmail.com">MAIL</a></li>
-            <li><a href="https://www.angeldemon.xyz/art.html"><img class="logo" src="assets/images/Logo.png" alt="Logo"></a></li>
+            <li><a href="https://www.angeldemon.xyz/art.html"><img class="logo" src="assets/images/Logo.png" alt="Logo"></a>
+            </li>
             <li class="instagram"><a href="https://www.instagram.com/angeld3monart/">INSTA</a></li>
             <li class="github"><a href="https://github.com/BellaIngenue">GIT</a></li>
         </ul>
@@ -47,32 +48,33 @@
 
 <div class="main">
     <div class="about">
-            <h3><span>Hi there! I'm Siena Rivera, welcome to my website!!</span></h3><br>
-            <p>Feel free to look around this website I created with HTML/CSS/JS, this website is continuously in
+        <h3><span>Hi there! I'm Siena Rivera, welcome to my website!!</span></h3><br>
+        <p>Feel free to look around this website I created with HTML/CSS/JS, this website is continuously in
             progress. To look at my Art Porfolio, click the logo in the top navigation.</p>
-            <canvas id="confetti"></canvas>
-            <div class = "but"><button id="button" class="button-53">~Welcome to My Portfolio~<br>🎉(click here for a surprise)</button>
-            </div>
-            <br>
-            <p>I am a Cognitive Science graduate who sometimes draws for fun! Feel free to find my artwork by clicking
-                my logo in the navigation bar!
-                <a href="https://github.com/bellaingenue">I also love to program, so I created this website from
-                    scratch</a>. Presently I am searching for work after graduating from
-                <a href="https://ucsd.edu/" target="_blank">UC San Diego.</a><br>
+        <canvas id="confetti"></canvas>
+        <div class="but">
+            <button id="button" class="button-53">~Welcome to My Portfolio~<br>🎉(click here for a surprise)</button>
+        </div>
+        <br>
+        <p>I am a Cognitive Science graduate who sometimes draws for fun! Feel free to find my artwork by clicking
+            my logo in the navigation bar!
+            <a href="https://github.com/bellaingenue">I also love to program, so I created this website from
+                scratch</a>. Presently I am searching for work after graduating from
+            <a href="https://ucsd.edu/" target="_blank">UC San Diego.</a><br>
 
-            </p>
-            <h3><span>Thank You for Coming to Visit Me!! 🤍 </span></h3>
+        </p>
+        <h3><span>Thank You for Coming to Visit Me!! 🤍 </span></h3>
 
-            <hr>
+        <hr>
 
-            <ul class="social">
-                <li><a href="mailto:angeldemonartwork@gmail.com" target="_blank"><i class="fa fa-address-card"></i></a>
-                </li>
-                <li><a href="https://www.linkedin.com/in/sienasrivera" target="_blank"><i
-                        class="fa fa-linkedin"></i></a></li>
-                <li><a href="https://instagram.com/angeld3monart" target="_blank"><i class="fa fa-instagram"></i></a>
-                </li>
-            </ul>
+        <ul class="social">
+            <li><a href="mailto:angeldemonartwork@gmail.com" target="_blank"><i class="fa fa-address-card"></i></a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/sienasrivera" target="_blank"><i
+                    class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://instagram.com/angeld3monart" target="_blank"><i class="fa fa-instagram"></i></a>
+            </li>
+        </ul>
     </div>
 </div>
 <div id="footer" class="footer">
